--- a/static/styles.css
+++ b/static/styles.css
@@ -209,3 +209,41 @@ body, html {
 	cursor: pointer;
 	margin-right: 10px;
 }
+.message {
+	display: flex;
+	margin-bottom: 10px;
+}
+
+.avatar {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	overflow: hidden;
+	margin-right: 10px;
+}
+
+.avatar img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.user-message {
+	flex-direction: row-reverse;
+}
+
+.user-message .avatar {
+	margin-right: 0;
+	margin-left: 10px;
+}
+
+.message-content {
+	max-width: 70%;
+	padding: 10px;
+	border-radius: 10px;
+	background-color: #f0f0f0;
+}
+
+.user-message .message-content {
+	background-color: #dcf8c6;
+}
