truing to change AI avatar

--- a/static/styles.css
+++ b/static/styles.css
@@ -149,7 +149,7 @@ body, html {
 }
 
 .user-message .message-content {
-	background-color: #dcf8c6;
+	background-color: #505f45;
 }
 
 .assistant-message .message-content {
