--- a/static/styles.css
+++ b/static/styles.css
@@ -41,7 +41,8 @@ body, html {
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	overflow-y: auto;
+	overflow: auto;
+	height: 100%;
 }
 
 .menu-items-container {
@@ -222,6 +223,7 @@ body, html {
 	padding: 15px 20px;
 	display: flex;
 	align-items: center;
+	border-top: 1px solid #e0e0e0;
 }
 
 #user-input {
