--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,8 @@
 :root {
-	--primary-color: #8e44ad;
+	--primary-color: #3449e5;
 	--secondary-color: #3498db;
 	--background-color: #ecf0f1;
-	--text-color: #2c3e50;
+	--text-color: #000000;
 	--chat-bubble-user: #3498db;
 	--chat-bubble-assistant: #2ecc71;
 }
